5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1758_1583.log
== TEST (2019-05-30 01:18:49) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=i+3
while(i<len(num)):
	new=num[i]+"."
	i=i+3
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:19:20) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=i+3
while(i<len(num)):
	new=num[i]+"."
	i=i+3
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:19:44) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=i+3
while(i<len(num)):
	new=num[i]+"."
	i=i+3
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:20:41) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=i+3
while(i<len(num)):
	new=num[i-1]+"."
	i=i+3
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:21:12) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=i+3
while(i<len(num)):
	new=num[i-1]+"."
	i=i+3
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:21:20) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=i+3
while(i<len(num)):
	new=num[i-1]+"."
	i=i+3
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:25:40) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=0
while(k<len(num)):
	a=num[i]+"."
	i=i+3
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:26:39) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=0
while(k<len(num)):
	a=num[i]"."
	i=i+3
	k=k+1
	print(a)
-- ERROR:
File "XXXX", line 8
    a=num[i]"."
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:26:48) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=0
while(k<len(num)):
	a=num[i]+"."
	i=i+3
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:27:15) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=3
k=0
s="."
while(k<len(num)):
	a=num[i]+s
	i=i+3
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:34:36) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=0
k=3
s=""
while(i<len(num)):
	if(i==(len(num)-3)):
		s=s+num[i:k]
		i=i+3
		k=K+3
	else:
		s=s+num[i:k]+"."
		i=i+3
		k=k+1
print(s)
	
-- EXECUTION TIME:
0.571601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1583/main.py", line 12, in <module>
    k=K+3
NameError: name 'K' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:35:43) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=0
k=3
s=""
while(i<len(num)):
	if(i==(len(num)-3)):
		s=s+num[i:k]
		i=i+3
		k=K+3
	else:
		s=s+num[i:k]+"."
		i=i+3
		k=k+1
	print(s)
	
-- EXECUTION TIME:
0.489655
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1583/main.py", line 12, in <module>
    k=K+3
NameError: name 'K' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:35:46) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=0
k=3
s=""
while(i<len(num)):
	if(i==(len(num)-3)):
		s=s+num[i:k]
		i=i+3
		k=K+3
	else:
		s=s+num[i:k]+"."
		i=i+3
		k=k+1
	print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:36:01) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=0
k=3
s=""
while(i<len(num)):
	if(i==(len(num)-3)):
		s=s+num[i:k]
		i=i+3
		k=k+3
	else:
		s=s+num[i:k]+"."
		i=i+3
		k=k+1
	print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:36:15) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=0
k=3
s=""
while(i<len(num)):
	if(i==(len(num)-3)):
		s=s+num[i:k]
		i=i+3
		k=k+3
	else:
		s=s+num[i:k]+"."
		i=i+3
		k=k+1
	print(s)
	
-- EXECUTION TIME:
0.591801
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.
123.4.
123.4..
123.4...
123.4....
123.4.....
123.4.....
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.
987.6.
987.6.
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:36:15) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=0
k=3
s=""
while(i<len(num)):
	if(i==(len(num)-3)):
		s=s+num[i:k]
		i=i+3
		k=k+3
	else:
		s=s+num[i:k]+"."
		i=i+3
		k=k+1
	print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:38:52) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=0
k=3
s=""
while(i<len(num)):
	if(i==(len(num)-3)):
		s=s+num[i:k]
		i=i+3
		k=k+3
	else:
		s=s+num[i:k]+"."
		i=i+3
		k=k+1
print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:39:09) 
-- CODE:
from numpy import*

num=input("entreo com o numero:")

i=0
k=3
s=""
while(i<len(num)):
	if(i==(len(num)-3)):
		s=s+num[i:k]
		i=i+3
		k=k+3
	else:
		s=s+num[i:k]+"."
		i=i+3
		k=k+3
print(s)
	
-- EXECUTION TIME:
0.405822
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
